# kdevops

./: .gitignore  .swcrc  README.md  package.json  pnpm-lock.yaml  pyproject.toml  schema.json  setup.py  tsconfig.json  tsup.config.ts
devops/: GCBMicroservice.py  cloudbuild.py  terraform.py
kdevops/: GCBMicroservice.py  cloudbuild.py  cmds.py  docker.py  gcloud.py  kubernetes.py  main.py  onepassword.py  templates.py  types.py  watch.py
scripts/: generate_json_schema.py  release.sh
src/: index.ts
src/commands/: getenv.ts
src/entities/: RunService.ts  Schedule.ts  Workflow.ts
src/lib/: cloudbuild.ts  cmds.ts  terraform.ts
