[tool.poetry]
name = "kdevops"
version = "0.1.1"
description = ""
authors = ["Marc Canaleta"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.1"

[tool.poetry.group.dev.dependencies]
dataclasses-jsonschema = "^2.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kdevops = "kdevops.main:main"
